[package]
edition = "2018"
readme = "README.md"
name = "flipper-zero"
version = "0.1.0"

[features]
itm = ["panic-itm"]
semihosting = ["panic-semihosting"]

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
stm32wb = { version = "0.15.1", features = ["stm32wb55", "rt"] }

[dependencies.kern]
path = "../../sys/kern"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "flipper-zero"
test = false
bench = false
