[package]
edition = "2021"
readme = "README.md"
name = "flipper-zero"
version = "0.1.0"

[features]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
kern = { path = "../../sys/kern" }
stm32wb = { workspace = true, features = ["stm32wb55", "rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "flipper-zero"
test = false
bench = false
