[package]
name = "drv-display-api"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
derive-idol-err = {path = "../../lib/derive-idol-err" }
embedded-graphics = "0.7.1"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
bench = false

[build-dependencies]
idol = {git = "https://github.com/pokeylope/idolatry.git"}
