[package]
name = "drv-display-api"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib" }
zerocopy = { workspace = true }
num-traits = { workspace = true }
derive-idol-err = { path = "../../lib/derive-idol-err" }
embedded-graphics = { workspace = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
bench = false

[build-dependencies]
idol = { workspace = true }
