[package]
name = "drv-flipper-input"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
stm32wb = { version = "0.15.1", features = ["stm32wb55"], git = "https://github.com/pokeylope/stm32wb" }
drv-i2c-api = {path = "../../drv/i2c-api"}
drv-i2c-devices = { path = "../../drv/i2c-devices" }
drv-stm32xx-sys-api = {path = "../../drv/stm32xx-sys-api", features = ["family-stm32wb"]}

[build-dependencies]
build-i2c = {path = "../../build/i2c"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-flipper-input"
test = false
bench = false
