[package]
name = "drv-stm32wb-spi-server"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
ringbuf = {path = "../../lib/ringbuf"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
drv-stm32wb-spi = {path = "../stm32wb-spi", default-features = false}
drv-stm32xx-sys-api = {path = "../stm32xx-sys-api", default-features = false}
drv-spi-api = {path = "../spi-api", default-features = false}
cortex-m = { version = "0.7", features = ["inline-asm"] }
stm32wb = { version = "0.15.1", default-features = false, git = "https://github.com/pokeylope/stm32wb" }
cfg-if = "1"
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}

[build-dependencies]
build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
serde = "1"
quote = "1"
call_rustfmt = {path = "../../build/call_rustfmt"}
syn = {version = "1", features = ["parsing"]}
proc-macro2 = "1"
indexmap = "1.7"

[features]
spi1 = []
spi2 = []
spi3 = []
spi4 = []
spi5 = []
spi6 = []
wb55 = ["stm32wb/stm32wb55", "drv-stm32wb-spi/wb55", "drv-stm32xx-sys-api/wb55"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-stm32wb-spi-server"
test = false
bench = false
