[package]
name = "drv-stm32wb-spi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
ringbuf = { path = "../../lib/ringbuf"}
zerocopy = { workspace = true }
num-traits = { workspace = true }
drv-stm32wb-spi = { path = "../stm32wb-spi", default-features = false }
drv-stm32xx-sys-api = { path = "../stm32xx-sys-api", default-features = false }
drv-spi-api = { path = "../spi-api", default-features = false }
cortex-m = { workspace = true }
stm32wb = { workspace = true }
cfg-if = { workspace = true }
idol-runtime = { workspace = true }

[build-dependencies]
build-util = { path = "../../build/util" }
idol = { workspace = true }
serde = { workspace = true }
quote = { workspace = true }
call_rustfmt = { path = "../../build/call_rustfmt" }
syn = { workspace = true }
proc-macro2 = { workspace = true }
indexmap = { workspace = true }

[features]
spi1 = []
spi2 = []
spi3 = []
spi4 = []
spi5 = []
spi6 = []
wb55 = ["stm32wb/stm32wb55", "drv-stm32wb-spi/wb55", "drv-stm32xx-sys-api/wb55"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-stm32wb-spi-server"
test = false
bench = false
