[package]
name = "task-blink"
version = "0.1.0"
edition = "2018"

[features]
panic-messages = ["userlib/panic-messages"]

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
userlib = {path = "../../sys/userlib"}
drv-stm32xx-sys-api = {path = "../../drv/stm32xx-sys-api", features = ["family-stm32wb"]}

[[bin]]
name = "task-blink"
test = false
bench = false
