[package]
name = "task-blink"
version = "0.1.0"
edition = "2021"

[features]
panic-messages = ["userlib/panic-messages"]

[dependencies]
cortex-m = { workspace = true }
userlib = { path = "../../sys/userlib" }
drv-i2c-api = { path = "../../drv/i2c-api" }
drv-i2c-devices = { path = "../../drv/i2c-devices" }
drv-stm32xx-sys-api = {path = "../../drv/stm32xx-sys-api", features = ["family-stm32wb"]}

[build-dependencies]
build-i2c = { path = "../../build/i2c" }

[[bin]]
name = "task-blink"
test = false
bench = false
