[package]
name = "task-flipper-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
drv-display-api = { path = "../../drv/display-api" }
embedded-graphics = "0.7.1"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-flipper-demo"
test = false
bench = false
